--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-pandas
-scikit-learn
-scipy
-flask
-joblib
-gunicorn
+flask==2.2.5
+scikit-learn==1.2.2
+pandas==2.1.2
+scipy==1.10.1
+joblib==1.3.2
+gunicorn==20.1.0
